# BEAST_pype

./: .gitignore  BDSKY-Serial-Comparative.ipynb  Generic-Comparative.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.yml  run-workflow.slurm
example_data/COVID-19_BA.2.86/: README.md  TreeTime_tree.nwk  metadata.tsv
parameters/: Test-BDSKY-serial.yml  Test-BDSKY-serial_full.yml  Test-BDSKY-serial_no-initial-tree.yml  Test-BDSKY-serial_xml-ready-to-go.yml  Test-Generic.yml  Test-Generic_full.yml  Test-Generic_no-initial-tree.yml  Test-Generic_xml-ready-to-go.yml
src/beast_pype/: beast_xml_gen.py  clockwork.py  data_extractors.py  date_utilities.py  mcmc_diagnostics.py  outputs.py  report_gen.py  seq_samplers.py  stat_distributions.py  string_utils.py  tree_time_scale.py  workflow.py
src/beast_pype/report_templates/: BDSKY-Serial-Comparative.ipynb  BDSKY-Serial-Report.ipynb  BDSKY-Serial-XML-Set-Comparison.ipynb  COVID-Surveillance-Report.ipynb  COVID-Surveillance.ipynb  Comparison-BDSKY-Report.ipynb  Generic-Comparative.ipynb  Generic.ipynb  OLD-BDSKY-Serial-XML-Set-Comparison.ipynb
src/beast_pype/workflow_modules/: Phase-1-Metadata_and_Sequence-Separation.ipynb  Phase-1i-Metadata-Gathering.ipynb  Phase-1ii-Sequence-Gathering.ipynb  Phase-2i-IQTree.ipynb  Phase-2ii-TreeTime-and-Down-Sampling.ipynb  (+6 more)
template_beast_xmls/: BDSKY_serial_COVID-19_template.xml  COVID_epi_params.ipynb  New_COVID_inf_period.ipynb  README.md
workflows/: BDSKY-serial-comparitive.ipynb  BDSKY-serial-strain-surveillance.ipynb  BDSKY-serial.ipynb  Generic.ipynb  README.md
